cleaned notes and removed redundant methods